resources/01-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: green
  namespace: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: xpiritbv/bluegreen:green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: bluegreen
  labels:
    app: green
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: green
---
