resources/02 blue.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blue
  namespace: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: xpiritbv/bluegreen:blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: bluegreen
  labels:
    app: blue
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: blue
